Fix containers alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -27,7 +27,7 @@ h3 {
 */
 header {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     width: 100%;
 }
 
